2004-11-08  Andre Klapper  <a901600@gmx.de>

	Fixes bug #61966.

	* addressbook-errors.xml: Add a missing word to a string.

2004-11-08  Steven Zhang <steven.zhang@sun.com>

	* gui/widgets/e-minicard.c: (e_minicard_activate_editor): 
	rename and make it a public function.
	(e_minicard_event): change accordingly.
	* gui/widgets/e-minicard.h: ditto.

2004-11-04  Sivaiah Nallagatla <snallagatla@novell.com>
	
	* gui/contact-editor/e-contact-editor.c (save_contact) :
	populate contact only afte we are sure that data is valid 
	and we can create that.
	Fixes #69079

2004-11-07  Rodney Dawes  <dobey@novell.com>

	* gui/contact-editor/e-contact-editor.c
	(init_email_record_location, init_im_record_location):
	Translate the category pretty names that we pass for creation of
	new menu item entries for the E-Mail and IM dropdown selections

	Partially fixes bug #66854
	
2004-11-04  mengjie yu  <meng-jie.yu@sun.com>

	fix for bugzilla #44876

	* gui/component/select-names/e-select-names-manager.c:
       (e_select_names_manager_entry_new):add a atk name for the entry.

2004-11-2   Hao Sheng  <hao.sheng@sun.com>

	* gui/widgets/e-minicard-view.c: popup right-click menu after
	pressing Shift+F10.

2004-11-01  Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/widgets/eab-gui-util.c 
	(added_cb) (_modified_cb) : Don't show
	error dialogs when status code is E_BOOK_ERROR_CANCELLED. We don't
	wabt to show "Error adding contact,  Cancelled" dialogs when user 
	cancels duplicated contact detected dialog.   	  
	
2004-10-27  Andre Klapper  <a9016009@gmx.de>

       * tools/evolution-addressbook-export.c: 
       Fixing a typo (bug 61069).

2004-10-26  Andre Klapper <a9016009@gmx.de>

	Fixes #61972.

	* addressbook/gui/contact-editor/e-contact-editor-address.c:
	Typo in country name: was "Grena-dines", now "Grenadines".

2004-10-25  Nat Friedman  <nat@novell.com>

	* gui/widgets/eab-contact-display.c (accum_multival_attribute):
	Display mutlivalued contact attributes in the preview.